--- a/final.html
+++ b/final.html
@@ -13,6 +13,18 @@
 </head>
 
 <body>
+  <div class="navbar-fixed">
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Travel Anywhere</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="">Your Account</a></li>
+        <li><a href="">My trips</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
 <div id="myHeader">
   <div id="index-banner" class="parallax-container">
     <div class="parallax"><img src="images/test.jpg"></div>
@@ -39,13 +51,13 @@
               <h3 class="header center teal-text text-lighten-2">Make a Reservation</h3>
             <div class="row">
               <div class="input-field col s12">
-                <input value="LAX" id="departAirport" type="text" class="validate">
+                <input placeholder="Metropolitan Oakland International Airport (OAK)" id="departAirport" type="text" class="validate">
                 <label class="active" for="departAirport">Flying From</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input value="OAK" id="arriveAirport" type="text" class="validate">
+                <input placeholder="Phoenix Sky Harbor International Airport (PHX)" id="arriveAirport" type="text" class="validate">
                 <label class="active" for="arriveAirport">Flying To</label>
               </div>
 </div>
