--- a/final.html
+++ b/final.html
@@ -46,18 +46,18 @@
   <div id="reserveDiv">
     <div class="row">
       <div class="col s13 m6">
-        <div class="card blue-grey darken-1">
-          <div class="card-content white-text">
-              <h3 class="header center teal-text text-lighten-2">Make a Reservation</h3>
+        <div class="card lighten-2">
+          <div class="card-content">
+              <h3 class="header center text-lighten-2">Make a Reservation</h3>
             <div class="row">
               <div class="input-field col s12">
-                <input placeholder="Metropolitan Oakland International Airport (OAK)" id="departAirport" type="text" class="validate">
+                <input placeholder="Departure Airport" id="departAirport" type="text" class="validate">
                 <label class="active" for="departAirport">Flying From</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input placeholder="Phoenix Sky Harbor International Airport (PHX)" id="arriveAirport" type="text" class="validate">
+                <input placeholder="Arrival Airport" id="arriveAirport" type="text" class="validate">
                 <label class="active" for="arriveAirport">Flying To</label>
               </div>
 </div>
@@ -185,6 +185,7 @@
     <div id="confirmationDiv">
 
       <div id="weatherDiv">
+
 
       </div>
     </div>
