--- a/final.html
+++ b/final.html
@@ -61,13 +61,13 @@
 
     <div class="row">
       <div class="input-field col s12">
-        <input placeholder="Departure Airport" id="departAirport1" type="text" class="validate">
+        <input placeholder="Departure Airport" id="departAirport" type="text" class="validate">
         <label class="active" for="departAirport">Flying From</label>
       </div>
     </div>
     <div class="row">
       <div class="input-field col s12">
-        <input placeholder="Arrival Airport" id="arriveAirport1" type="text" class="validate">
+        <input placeholder="Arrival Airport" id="arriveAirport" type="text" class="validate">
         <label class="active" for="arriveAirport">Flying To</label>
       </div>
 </div>
@@ -258,7 +258,7 @@
     </div>
   </div>
   <div id="tripspage">
-    
+
     <div id="tripstable">
 
     </div>
