--- a/final.html
+++ b/final.html
@@ -86,14 +86,14 @@
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <select id="amount">
+                <!-- <select id="amount">
                   <option value="" disabled selected>How many tickets do you want to book?</option>
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
                   <option value="4">4</option>
                   <option value="5">5</option>
-                </select>
+                </select> -->
 
               </div>
 </div>
@@ -127,14 +127,15 @@
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <select>
+
+              <!-- <select >
                 <option value="" disabled selected>How many tickets do you want to book?</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
                 <option value="5">5</option>
-              </select>
+              </select> -->
 
             </div>
 </div>
