--- a/final.html
+++ b/final.html
@@ -205,6 +205,20 @@
         <label for="email">Email</label>
       </div>
     </div>
+      <div class="row">
+      <div class="input-field col s6">
+        <input placeholder="0-100" id="seatRowNumber" type="text" class="validate">
+        <label for="seatRowNumber">Seat Row</label>
+      </div>
+      <div class="input-field col s6">
+        <input placeholder="A,B,C" id="seatLetter" type="text" class="validate">
+        <label for="seatLetter">Seat Letter</label>
+      </div>
+          <div class="input-field col s6">
+        <input placeholder="First Class, Business, Economy" id="seatCabin" type="text" class="validate">
+        <label for="seatCabin">Seat Cabin</label>
+      </div>
+    </div>
 
     <div class="row">
       <div class="input-field col s12">
